# Slides2Notes

./: .gitignore  README.md  ainotes_from_md.py  ainotes_from_pdf.py  compile.sh  img_to_md.py  pdf2md.py  pdf_to_md.py  prompts.py  pyproject.toml  shell.nix
